Ingress/Ingress-Basic/Deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: MyApp-Deployment
  labels:
    app: nginxApp
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nginxApp
  template:
    metadata:
      labels:
        app: nginxApp
    spec:
      container:
        - name: nginxApp-1
          image: stacksimplify/kube-nginxapp1:1.0.0
          port:
            - containerPort: 80
