Ingress/Ingress-Basic/ClusterIPservice.yml
apiVersion: v1
kind: Service
metadata:
  name: nginx-ClusterIP-Service
  labels:
    app: nginxApp
spec:
 type: ClusterIP
 selector:
   app: nginxApp
ports:
  - port: 80
    targetPort: 80
