Ingress/Ingress-Basic/IngressResource.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-Ingress-Resource
  annotations:
    kubernetes.io/ingress.class: nginx  
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nginx-ClusterIP-Service
                port: 
                  number: 80
